Some performance improvements for Jobservers; changed locking of taskfiles (windows code)