@@ -184,13 +184,21 @@ public class ProcessInfo
 		return result;
 	}
 
-	public static HashMap<String,Long> getStartTimes(HashMap<String,Long> startTimes)
+	synchronized public static HashMap<String,Long> getStartTimes(Config cfg, HashMap<String,Long> startTimes)
 	{
 		HashMap<String,Long> result = startTimes;
 		if (result == null)
 			result = new HashMap<String,Long>();
 		else
 			result.clear();
+
+		final File job_file_prefix = (File) cfg.get (Config.JOB_FILE_PREFIX);
+		final File tmp_file = new File(job_file_prefix.getParent() + "/starttimes." + cfg.get(Config.REPO_USER));
+		String tmpfilename = null;
+		try {
+			tmpfilename = tmp_file.getCanonicalPath();
+		} catch (Exception e) {}
+
 		String os = System.getProperty("os.name").toLowerCase();
 		if(   os.contains("mac")
 		   || os.contains("nix")
@@ -198,8 +206,14 @@ public class ProcessInfo
 		   || os.contains("aix")
 		  ) {
 			try {
-				Process p = Runtime.getRuntime().exec("ps -e -o pid= -o lstart=");
-				BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+				ProcessBuilder pb = new ProcessBuilder("ps", "-e", "-o", "pid=", "-o", "lstart=");
+				pb.redirectOutput(new File(tmpfilename));
+				pb.redirectErrorStream(true);
+				Process p = pb.start();
+				try {
+					p.waitFor();
+				} catch (InterruptedException ie) {  }
+				BufferedReader in = new BufferedReader(new InputStreamReader(new FileInputStream(tmpfilename)));
 				String line;
 				String pattern = "MMM d HH:mm:ss yyyy";
 				int patternLength = pattern.length();
@@ -224,9 +238,13 @@ public class ProcessInfo
 			}
 		} else if (os.contains("win")) {
 			try {
-				Process p = Runtime.getRuntime().exec("CMD /C WMIC PROCESS GET HANDLE, CREATIONDATE");
-				BufferedReader in = new BufferedReader(new InputStreamReader(p.getInputStream()));
+				ProcessBuilder pb = new ProcessBuilder("WMIC", "PROCESS", "GET", "HANDLE,", "CREATIONDATE");
+				pb.redirectOutput(new File(tmpfilename));
+				pb.redirectErrorStream(true);
+				Process p = pb.start();
 				p.getOutputStream().close();
+				p.waitFor();
+				BufferedReader in = new BufferedReader(new InputStreamReader(new FileInputStream(tmpfilename), "UTF-16"));
 				String line;
 				String pattern = "yyyyMMddHHmmss";
 				int patternLength = pattern.length();
